<resources>
    <string name="app_name">My Application</string>
    <string name="strname">Name</string>
    <string name="strheight">Height</string>
    <string name="strweight">Weight</string>
    <string name="strsubmit">Submit</string>
    <string name="strnextpage">NextPage</string>
    <string name="strshowbmi">Your BMI is</string>
    <string name="strtooLow">Too low</string>
    <string name="strtoohigh">Too high</string>
    <string name="strstd">normal</string>
</resources>
